// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Audio Player Composable renders with TimeDisplay label overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 64px;
  height: 64px;
  padding: 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #AEBFFF;
  border-radius: 50%;
  color: #3358CC;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: progress;
}

.emotion-0 svg {
  width: 32px;
  height: 32px;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-3 {
  width: 32px;
  height: 32px;
  stroke: #3358CC;
}

.emotion-3 circle {
  r: calc(50% - 2px);
  fill: transparent;
  stroke-width: 2px;
  stroke-dasharray: 502;
  stroke-dashoffset: 360;
  -webkit-transform: rotate(270deg);
  -moz-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
  transform-origin: 50% 50%;
  will-change: stroke-dasharray;
  will-change: stroke-dashoffset;
  will-change: transform;
  -webkit-animation: rotate 1s linear infinite;
  animation: rotate 1s linear infinite;
}

.emotion-4 {
  margin: 0;
  display: inline-block;
  display: block;
  background-color: #3358CC;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
}

<section
    aria-label="Audio Player"
  >
    <audio
      autoplay=""
      data-testid="audio-element"
      src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
    />
    <button
      aria-busy="true"
      aria-label="Stop"
      aria-live="polite"
      aria-pressed="true"
      class="emotion-0"
      data-testid="audio-player-play-pause-button"
      type="button"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <svg
            aria-hidden="true"
            class="emotion-3"
            fill="currentColor"
            viewBox="0 0 64 64"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="50%"
              cy="50%"
            />
          </svg>
        </div>
      </div>
    </button>
    <span
      class="emotion-4"
    >
      00:00/00:00 
    </span>
  </section>
</DocumentFragment>
`;

exports[`Audio Player Composable seekBar should renders and behaves as expected 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  position: relative;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: -webkit-grabbing;
  cursor: grabbing;
  box-sizing: border-box;
  background-color: #FAFAFA;
  border-radius: 20rem;
  margin: calc(16px/2 - 8px/2) calc(16px/2);
  height: 8px;
  width: 100%;
}

.emotion-2 {
  box-shadow: 0 0 2px 0 rgba(10,10,10,0.08);
  border-style: solid;
  border-width: 1px;
  border-radius: 50%;
  background-color: #3358CC;
  border-color: #FFFFFF;
  height: 16px;
  width: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: -webkit-grabbing;
  cursor: grabbing;
}

.emotion-2 svg {
  fill: #C0C0C0;
}

.emotion-2:hover:not(:disabled) {
  background-color: #2B4AAB;
}

.emotion-2:active:not(:disabled) {
  background-color: #213A82;
}

.emotion-2:active:not(:disabled) svg {
  fill: #535353;
}

.emotion-3 {
  display: block;
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-4 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 64px;
  height: 64px;
  padding: 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 50%;
  color: #FFFFFF;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-4 svg {
  width: 32px;
  height: 32px;
}

.emotion-4 svg {
  fill: #FFFFFF;
}

.emotion-4:hover:not(:disabled) {
  background-color: #2B4AAB;
}

.emotion-4:active:not(:disabled) {
  background-color: #213A82;
}

.emotion-4:disabled {
  background-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-4:disabled svg {
  fill: #C0C0C0;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-7 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2E2E2E;
  transition-property: fill;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  vertical-align: unset;
  display: inline-block;
}

.emotion-9 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 48px;
  height: 48px;
  padding: 12px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 50%;
  color: #FFFFFF;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-9 svg {
  width: 24px;
  height: 24px;
}

.emotion-9 svg {
  fill: #FFFFFF;
}

.emotion-9:hover:not(:disabled) {
  background-color: #2B4AAB;
}

.emotion-9:active:not(:disabled) {
  background-color: #213A82;
}

.emotion-9:disabled {
  background-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-9:disabled svg {
  fill: #C0C0C0;
}

<section
    aria-label="Audio Player"
  >
    <audio
      data-testid="audio-element"
      src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
    />
    <div
      class="emotion-0"
      data-testid="audio-slider"
    >
      <div
        class="emotion-1"
        data-testid="audio-slider-track"
        style="background: rgb(255, 255, 0);"
        values="10"
      >
        <div
          aria-describedby="mock-nk-1"
          aria-label="seek bar"
          aria-valuemax="6610"
          aria-valuemin="0"
          aria-valuenow="10"
          aria-valuetext="Playback time: 10 seconds of 1 hour 50 minutes 10 seconds"
          class="emotion-2"
          data-testid="audio-slider-thumb"
          draggable="false"
          role="slider"
          style="position: absolute; z-index: 0; cursor: grabbing; user-select: none; transform: translate(NaNpx, NaNpx);"
          tabindex="0"
          values="10"
        />
      </div>
    </div>
    <span
      aria-hidden="true"
      class="emotion-3"
      id="mock-nk-1"
    >
      Use the arrow keys to fast forward or rewind
    </span>
    <button
      aria-label="Play"
      aria-pressed="false"
      class="emotion-4"
      data-testid="audio-player-play-pause-button"
      type="button"
    >
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <svg
            aria-hidden="true"
            class="emotion-7 emotion-8"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M8 5v14l11-7z"
            />
          </svg>
        </div>
      </div>
    </button>
    <button
      aria-label="Fast forward for 10 seconds"
      class="emotion-9"
      data-testid="audio-player-forward-button"
      type="button"
    >
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <svg
            aria-hidden="true"
            class="emotion-7 emotion-8"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="24"
              width="24"
            />
            <path
              d="M18 13c0 3.31-2.69 6-6 6s-6-2.69-6-6 2.69-6 6-6v4l5-5-5-5v4c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8h-2z"
            />
            <polygon
              points="10.86,15.94 10.86,11.67 10.77,11.67 9,12.3 9,12.99 10.01,12.68 10.01,15.94"
            />
            <path
              d="M12.25 13.44v.74c0 1.9 1.31 1.82 1.44 1.82.14 0 1.44.09 1.44-1.82v-.74c0-1.9-1.31-1.82-1.44-1.82-.14 0-1.44-.09-1.44 1.82zm2.04-.12v.97c0 .77-.21 1.03-.59 1.03s-.6-.26-.6-1.03v-.97c0-.75.22-1.01.59-1.01.38-.01.6.26.6 1.01z"
            />
          </svg>
        </div>
      </div>
    </button>
    <button
      aria-label="Rewind 10 seconds"
      class="emotion-9"
      data-testid="audio-player-replay-button"
      type="button"
    >
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <svg
            aria-hidden="true"
            class="emotion-7 emotion-8"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="24"
              width="24"
            />
            <path
              d="M11.99 5V1l-5 5 5 5V7c3.31 0 6 2.69 6 6s-2.69 6-6 6-6-2.69-6-6h-2c0 4.42 3.58 8 8 8s8-3.58 8-8-3.58-8-8-8z"
            />
            <path
              d="M10.89 16h-.85v-3.26l-1.01.31v-.69l1.77-.63h.09V16zM15.17 14.24c0 .32-.03.6-.1.82s-.17.42-.29.57-.28.26-.45.33-.37.1-.59.1-.41-.03-.59-.1-.33-.18-.46-.33-.23-.34-.3-.57-.11-.5-.11-.82v-.74c0-.32.03-.6.1-.82s.17-.42.29-.57.28-.26.45-.33.37-.1.59-.1.41.03.59.1.33.18.46.33.23.34.3.57.11.5.11.82v.74zm-.85-.86c0-.19-.01-.35-.04-.48s-.07-.23-.12-.31-.11-.14-.19-.17-.16-.05-.25-.05-.18.02-.25.05-.14.09-.19.17-.09.18-.12.31-.04.29-.04.48v.97c0 .19.01.35.04.48s.07.24.12.32.11.14.19.17.16.05.25.05.18-.02.25-.05.14-.09.19-.17.09-.19.11-.32.04-.29.04-.48v-.97z"
            />
          </svg>
        </div>
      </div>
    </button>
  </section>
</DocumentFragment>
`;

exports[`Audio Player Composable seekBar should renders and behaves as expected 2`] = `
.emotion-0 {
  box-shadow: 0 0 2px 0 rgba(10,10,10,0.08);
  border-style: solid;
  border-width: 1px;
  border-radius: 50%;
  background-color: #3358CC;
  border-color: #FFFFFF;
  height: 16px;
  width: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: -webkit-grabbing;
  cursor: grabbing;
}

.emotion-0 svg {
  fill: #C0C0C0;
}

.emotion-0:hover:not(:disabled) {
  background-color: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  background-color: #213A82;
}

.emotion-0:active:not(:disabled) svg {
  fill: #535353;
}

<div
  aria-describedby="mock-nk-1"
  aria-label="seek bar"
  aria-valuemax="6610"
  aria-valuemin="0"
  aria-valuenow="35"
  aria-valuetext="Playback time: 35 seconds of 1 hour 50 minutes 10 seconds"
  class="emotion-0"
  data-testid="audio-slider-thumb"
  draggable="false"
  role="slider"
  style="position: absolute; z-index: 0; cursor: grabbing; user-select: none; transform: translate(NaNpx, NaNpx);"
  tabindex="0"
  values="35"
/>
`;

exports[`Audio Player Composable seekBar should renders with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  position: relative;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  box-sizing: border-box;
  background-color: #243c46;
  margin: calc(24px/2 - 12px/2) calc(24px/2);
  height: 12px;
  width: 100%;
}

.emotion-2 {
  background-color: #f6807e;
  border-radius: 50%;
  height: 24px;
  width: 24px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: pointer;
}

.emotion-3 {
  display: block;
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-4 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 64px;
  height: 64px;
  padding: 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #AEBFFF;
  border-radius: 50%;
  color: #3358CC;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: progress;
}

.emotion-4 svg {
  width: 32px;
  height: 32px;
}

.emotion-4 svg {
  fill: #3358CC;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-7 {
  width: 32px;
  height: 32px;
  stroke: #3358CC;
}

.emotion-7 circle {
  r: calc(50% - 2px);
  fill: transparent;
  stroke-width: 2px;
  stroke-dasharray: 502;
  stroke-dashoffset: 360;
  -webkit-transform: rotate(270deg);
  -moz-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
  transform-origin: 50% 50%;
  will-change: stroke-dasharray;
  will-change: stroke-dashoffset;
  will-change: transform;
  -webkit-animation: rotate 1s linear infinite;
  animation: rotate 1s linear infinite;
}

.emotion-8 {
  margin: 0;
  display: inline-block;
  display: block;
  background-color: transparent;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
}

<section
    aria-label="Audio Player"
  >
    <audio
      data-testid="audio-element"
      src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
    />
    <div
      class="emotion-0"
      data-testid="audio-slider"
    >
      <div
        class="emotion-1"
        data-testid="audio-slider-track"
        style="background: rgb(255, 255, 0);"
        values="0"
      >
        <div
          aria-describedby="mock-nk-1"
          aria-label="seek bar"
          aria-valuemax="1"
          aria-valuemin="0"
          aria-valuenow="0"
          aria-valuetext="Playback time: 0 seconds of 0 seconds"
          class="emotion-2"
          data-testid="audio-slider-thumb"
          draggable="false"
          role="slider"
          style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(NaNpx, NaNpx);"
          tabindex="0"
          values="0"
        />
      </div>
    </div>
    <span
      aria-hidden="true"
      class="emotion-3"
      id="mock-nk-1"
    >
      Use the arrow keys to fast forward or rewind
    </span>
    <button
      aria-busy="true"
      aria-label="Play"
      aria-live="polite"
      aria-pressed="false"
      class="emotion-4"
      data-testid="audio-player-play-pause-button"
      type="button"
    >
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <svg
            aria-hidden="true"
            class="emotion-7"
            fill="currentColor"
            viewBox="0 0 64 64"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="50%"
              cy="50%"
            />
          </svg>
        </div>
      </div>
    </button>
    <span
      class="emotion-8"
    >
      00:00/00:00 
    </span>
  </section>
</DocumentFragment>
`;

exports[`Audio Player Composable should phasing playPause button loading state as expected 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 64px;
  height: 64px;
  padding: 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #AEBFFF;
  border-radius: 50%;
  color: #3358CC;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: progress;
}

.emotion-0 svg {
  width: 32px;
  height: 32px;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-3 {
  width: 32px;
  height: 32px;
  stroke: #3358CC;
}

.emotion-3 circle {
  r: calc(50% - 2px);
  fill: transparent;
  stroke-width: 2px;
  stroke-dasharray: 502;
  stroke-dashoffset: 360;
  -webkit-transform: rotate(270deg);
  -moz-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
  transform-origin: 50% 50%;
  will-change: stroke-dasharray;
  will-change: stroke-dashoffset;
  will-change: transform;
  -webkit-animation: rotate 1s linear infinite;
  animation: rotate 1s linear infinite;
}

<button
  aria-busy="true"
  aria-label="Play"
  aria-live="polite"
  aria-pressed="false"
  class="emotion-0"
  data-testid="audio-player-play-pause-button"
  type="button"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    >
      <svg
        aria-hidden="true"
        class="emotion-3"
        fill="currentColor"
        viewBox="0 0 64 64"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="50%"
          cy="50%"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Audio Player Composable should phasing playPause button loading state as expected 2`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 64px;
  height: 64px;
  padding: 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 50%;
  color: #FFFFFF;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-0 svg {
  width: 32px;
  height: 32px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0:hover:not(:disabled) {
  background-color: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  background-color: #213A82;
}

.emotion-0:disabled {
  background-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-0:disabled svg {
  fill: #C0C0C0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2E2E2E;
  transition-property: fill;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  vertical-align: unset;
  display: inline-block;
}

<button
  aria-label="Play"
  aria-pressed="false"
  class="emotion-0"
  data-testid="audio-player-play-pause-button"
  type="button"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    >
      <svg
        aria-hidden="true"
        class="emotion-3 emotion-4"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M8 5v14l11-7z"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Audio Player Composable should phasing playPause button loading state as expected 3`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 64px;
  height: 64px;
  padding: 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #AEBFFF;
  border-radius: 50%;
  color: #3358CC;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: progress;
}

.emotion-0 svg {
  width: 32px;
  height: 32px;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-3 {
  width: 32px;
  height: 32px;
  stroke: #3358CC;
}

.emotion-3 circle {
  r: calc(50% - 2px);
  fill: transparent;
  stroke-width: 2px;
  stroke-dasharray: 502;
  stroke-dashoffset: 360;
  -webkit-transform: rotate(270deg);
  -moz-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
  transform-origin: 50% 50%;
  will-change: stroke-dasharray;
  will-change: stroke-dashoffset;
  will-change: transform;
  -webkit-animation: rotate 1s linear infinite;
  animation: rotate 1s linear infinite;
}

<button
  aria-busy="true"
  aria-label="Play"
  aria-live="polite"
  aria-pressed="false"
  class="emotion-0"
  data-testid="audio-player-play-pause-button"
  type="button"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    >
      <svg
        aria-hidden="true"
        class="emotion-3"
        fill="currentColor"
        viewBox="0 0 64 64"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="50%"
          cy="50%"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Audio Player Composable should render correctly when in autoplay 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  position: relative;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  box-sizing: border-box;
  background-color: #FAFAFA;
  border-radius: 20rem;
  margin: calc(16px/2 - 8px/2) calc(16px/2);
  height: 8px;
  width: 100%;
}

.emotion-2 {
  box-shadow: 0 0 2px 0 rgba(10,10,10,0.08);
  border-style: solid;
  border-width: 1px;
  border-radius: 50%;
  background-color: #3358CC;
  border-color: #FFFFFF;
  height: 16px;
  width: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: pointer;
}

.emotion-2 svg {
  fill: #C0C0C0;
}

.emotion-2:hover:not(:disabled) {
  background-color: #2B4AAB;
}

.emotion-2:active:not(:disabled) {
  background-color: #213A82;
}

.emotion-2:active:not(:disabled) svg {
  fill: #535353;
}

.emotion-3 {
  display: block;
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-4 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 64px;
  height: 64px;
  padding: 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #AEBFFF;
  border-radius: 50%;
  color: #3358CC;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: progress;
}

.emotion-4 svg {
  width: 32px;
  height: 32px;
}

.emotion-4 svg {
  fill: #3358CC;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-7 {
  width: 32px;
  height: 32px;
  stroke: #3358CC;
}

.emotion-7 circle {
  r: calc(50% - 2px);
  fill: transparent;
  stroke-width: 2px;
  stroke-dasharray: 502;
  stroke-dashoffset: 360;
  -webkit-transform: rotate(270deg);
  -moz-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
  transform-origin: 50% 50%;
  will-change: stroke-dasharray;
  will-change: stroke-dashoffset;
  will-change: transform;
  -webkit-animation: rotate 1s linear infinite;
  animation: rotate 1s linear infinite;
}

<section
    aria-label="Audio Player"
  >
    <audio
      autoplay=""
      data-testid="audio-element"
      src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
    />
    <div
      class="emotion-0"
      data-testid="audio-slider"
    >
      <div
        class="emotion-1"
        data-testid="audio-slider-track"
        style="background: rgb(255, 255, 0);"
        values="0"
      >
        <div
          aria-describedby="mock-nk-1"
          aria-label="seek bar"
          aria-valuemax="1"
          aria-valuemin="0"
          aria-valuenow="0"
          aria-valuetext="Playback time: 0 seconds of 0 seconds"
          class="emotion-2"
          data-testid="audio-slider-thumb"
          draggable="false"
          role="slider"
          style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(NaNpx, NaNpx);"
          tabindex="0"
          values="0"
        />
      </div>
    </div>
    <span
      aria-hidden="true"
      class="emotion-3"
      id="mock-nk-1"
    >
      Use the arrow keys to fast forward or rewind
    </span>
    <button
      aria-busy="true"
      aria-label="Stop"
      aria-live="polite"
      aria-pressed="true"
      class="emotion-4"
      data-testid="audio-player-play-pause-button"
      type="button"
    >
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <svg
            aria-hidden="true"
            class="emotion-7"
            fill="currentColor"
            viewBox="0 0 64 64"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="50%"
              cy="50%"
            />
          </svg>
        </div>
      </div>
    </button>
  </section>
</DocumentFragment>
`;

exports[`Audio Player Composable should render correctly when in autoplay 2`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  position: relative;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  box-sizing: border-box;
  background-color: #FAFAFA;
  border-radius: 20rem;
  margin: calc(16px/2 - 8px/2) calc(16px/2);
  height: 8px;
  width: 100%;
}

.emotion-2 {
  box-shadow: 0 0 2px 0 rgba(10,10,10,0.08);
  border-style: solid;
  border-width: 1px;
  border-radius: 50%;
  background-color: #3358CC;
  border-color: #FFFFFF;
  height: 16px;
  width: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: pointer;
}

.emotion-2 svg {
  fill: #C0C0C0;
}

.emotion-2:hover:not(:disabled) {
  background-color: #2B4AAB;
}

.emotion-2:active:not(:disabled) {
  background-color: #213A82;
}

.emotion-2:active:not(:disabled) svg {
  fill: #535353;
}

.emotion-3 {
  display: block;
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-4 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 64px;
  height: 64px;
  padding: 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #AEBFFF;
  border-radius: 50%;
  color: #3358CC;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: progress;
}

.emotion-4 svg {
  width: 32px;
  height: 32px;
}

.emotion-4 svg {
  fill: #3358CC;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-7 {
  width: 32px;
  height: 32px;
  stroke: #3358CC;
}

.emotion-7 circle {
  r: calc(50% - 2px);
  fill: transparent;
  stroke-width: 2px;
  stroke-dasharray: 502;
  stroke-dashoffset: 360;
  -webkit-transform: rotate(270deg);
  -moz-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
  transform-origin: 50% 50%;
  will-change: stroke-dasharray;
  will-change: stroke-dashoffset;
  will-change: transform;
  -webkit-animation: rotate 1s linear infinite;
  animation: rotate 1s linear infinite;
}

<section
    aria-label="Audio Player"
  >
    <audio
      autoplay=""
      data-testid="audio-element"
      src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
    />
    <div
      class="emotion-0"
      data-testid="audio-slider"
    >
      <div
        class="emotion-1"
        data-testid="audio-slider-track"
        style="background: rgb(255, 255, 0);"
        values="0"
      >
        <div
          aria-describedby="mock-nk-1"
          aria-label="seek bar"
          aria-valuemax="1"
          aria-valuemin="0"
          aria-valuenow="0"
          aria-valuetext="Playback time: 0 seconds of 0 seconds"
          class="emotion-2"
          data-testid="audio-slider-thumb"
          draggable="false"
          role="slider"
          style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(NaNpx, NaNpx);"
          tabindex="0"
          values="0"
        />
      </div>
    </div>
    <span
      aria-hidden="true"
      class="emotion-3"
      id="mock-nk-1"
    >
      Use the arrow keys to fast forward or rewind
    </span>
    <button
      aria-busy="true"
      aria-label="Stop"
      aria-live="polite"
      aria-pressed="true"
      class="emotion-4"
      data-testid="audio-player-play-pause-button"
      type="button"
    >
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <svg
            aria-hidden="true"
            class="emotion-7"
            fill="currentColor"
            viewBox="0 0 64 64"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="50%"
              cy="50%"
            />
          </svg>
        </div>
      </div>
    </button>
  </section>
</DocumentFragment>
`;

exports[`Audio Player Composable should render default display time label 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  position: relative;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  box-sizing: border-box;
  background-color: #FAFAFA;
  border-radius: 20rem;
  margin: calc(16px/2 - 8px/2) calc(16px/2);
  height: 8px;
  width: 100%;
}

.emotion-2 {
  box-shadow: 0 0 2px 0 rgba(10,10,10,0.08);
  border-style: solid;
  border-width: 1px;
  border-radius: 50%;
  background-color: #3358CC;
  border-color: #FFFFFF;
  height: 16px;
  width: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: pointer;
}

.emotion-2 svg {
  fill: #C0C0C0;
}

.emotion-2:hover:not(:disabled) {
  background-color: #2B4AAB;
}

.emotion-2:active:not(:disabled) {
  background-color: #213A82;
}

.emotion-2:active:not(:disabled) svg {
  fill: #535353;
}

.emotion-3 {
  display: block;
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-4 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 64px;
  height: 64px;
  padding: 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #AEBFFF;
  border-radius: 50%;
  color: #3358CC;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: progress;
}

.emotion-4 svg {
  width: 32px;
  height: 32px;
}

.emotion-4 svg {
  fill: #3358CC;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-7 {
  width: 32px;
  height: 32px;
  stroke: #3358CC;
}

.emotion-7 circle {
  r: calc(50% - 2px);
  fill: transparent;
  stroke-width: 2px;
  stroke-dasharray: 502;
  stroke-dashoffset: 360;
  -webkit-transform: rotate(270deg);
  -moz-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
  transform-origin: 50% 50%;
  will-change: stroke-dasharray;
  will-change: stroke-dashoffset;
  will-change: transform;
  -webkit-animation: rotate 1s linear infinite;
  animation: rotate 1s linear infinite;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 48px;
  height: 48px;
  padding: 12px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 50%;
  color: #FFFFFF;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-8 svg {
  width: 24px;
  height: 24px;
}

.emotion-8 svg {
  fill: #FFFFFF;
}

.emotion-8:hover:not(:disabled) {
  background-color: #2B4AAB;
}

.emotion-8:active:not(:disabled) {
  background-color: #213A82;
}

.emotion-8:disabled {
  background-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-8:disabled svg {
  fill: #C0C0C0;
}

.emotion-11 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2E2E2E;
  transition-property: fill;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  vertical-align: unset;
  display: inline-block;
}

<section
    aria-label="Audio Player"
  >
    <audio
      data-testid="audio-element"
      src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
    />
    <div
      class="emotion-0"
      data-testid="audio-slider"
    >
      <div
        class="emotion-1"
        data-testid="audio-slider-track"
        style="background: rgb(255, 255, 0);"
        values="0"
      >
        <div
          aria-describedby="mock-nk-1"
          aria-label="seek bar"
          aria-valuemax="1"
          aria-valuemin="0"
          aria-valuenow="0"
          aria-valuetext="Playback time: 0 seconds of 0 seconds"
          class="emotion-2"
          data-testid="audio-slider-thumb"
          draggable="false"
          role="slider"
          style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(NaNpx, NaNpx);"
          tabindex="0"
          values="0"
        />
      </div>
    </div>
    <span
      aria-hidden="true"
      class="emotion-3"
      id="mock-nk-1"
    >
      Use the arrow keys to fast forward or rewind
    </span>
    <button
      aria-busy="true"
      aria-label="Play"
      aria-live="polite"
      aria-pressed="false"
      class="emotion-4"
      data-testid="audio-player-play-pause-button"
      type="button"
    >
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <svg
            aria-hidden="true"
            class="emotion-7"
            fill="currentColor"
            viewBox="0 0 64 64"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="50%"
              cy="50%"
            />
          </svg>
        </div>
      </div>
    </button>
    <button
      aria-label="Fast forward for 10 seconds"
      class="emotion-8"
      data-testid="audio-player-forward-button"
      type="button"
    >
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <svg
            aria-hidden="true"
            class="emotion-11 emotion-12"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="24"
              width="24"
            />
            <path
              d="M18 13c0 3.31-2.69 6-6 6s-6-2.69-6-6 2.69-6 6-6v4l5-5-5-5v4c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8h-2z"
            />
            <polygon
              points="10.86,15.94 10.86,11.67 10.77,11.67 9,12.3 9,12.99 10.01,12.68 10.01,15.94"
            />
            <path
              d="M12.25 13.44v.74c0 1.9 1.31 1.82 1.44 1.82.14 0 1.44.09 1.44-1.82v-.74c0-1.9-1.31-1.82-1.44-1.82-.14 0-1.44-.09-1.44 1.82zm2.04-.12v.97c0 .77-.21 1.03-.59 1.03s-.6-.26-.6-1.03v-.97c0-.75.22-1.01.59-1.01.38-.01.6.26.6 1.01z"
            />
          </svg>
        </div>
      </div>
    </button>
    <button
      aria-label="Rewind 10 seconds"
      class="emotion-8"
      data-testid="audio-player-replay-button"
      type="button"
    >
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <svg
            aria-hidden="true"
            class="emotion-11 emotion-12"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="24"
              width="24"
            />
            <path
              d="M11.99 5V1l-5 5 5 5V7c3.31 0 6 2.69 6 6s-2.69 6-6 6-6-2.69-6-6h-2c0 4.42 3.58 8 8 8s8-3.58 8-8-3.58-8-8-8z"
            />
            <path
              d="M10.89 16h-.85v-3.26l-1.01.31v-.69l1.77-.63h.09V16zM15.17 14.24c0 .32-.03.6-.1.82s-.17.42-.29.57-.28.26-.45.33-.37.1-.59.1-.41-.03-.59-.1-.33-.18-.46-.33-.23-.34-.3-.57-.11-.5-.11-.82v-.74c0-.32.03-.6.1-.82s.17-.42.29-.57.28-.26.45-.33.37-.1.59-.1.41.03.59.1.33.18.46.33.23.34.3.57.11.5.11.82v.74zm-.85-.86c0-.19-.01-.35-.04-.48s-.07-.23-.12-.31-.11-.14-.19-.17-.16-.05-.25-.05-.18.02-.25.05-.14.09-.19.17-.09.18-.12.31-.04.29-.04.48v.97c0 .19.01.35.04.48s.07.24.12.32.11.14.19.17.16.05.25.05.18-.02.25-.05.14-.09.19-.17.09-.19.11-.32.04-.29.04-.48v-.97z"
            />
          </svg>
        </div>
      </div>
    </button>
  </section>
</DocumentFragment>
`;

exports[`Audio Player Composable should render with no errors 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  position: relative;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  box-sizing: border-box;
  background-color: #FAFAFA;
  border-radius: 20rem;
  margin: calc(16px/2 - 8px/2) calc(16px/2);
  height: 8px;
  width: 100%;
}

.emotion-2 {
  box-shadow: 0 0 2px 0 rgba(10,10,10,0.08);
  border-style: solid;
  border-width: 1px;
  border-radius: 50%;
  background-color: #3358CC;
  border-color: #FFFFFF;
  height: 16px;
  width: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: pointer;
}

.emotion-2 svg {
  fill: #C0C0C0;
}

.emotion-2:hover:not(:disabled) {
  background-color: #2B4AAB;
}

.emotion-2:active:not(:disabled) {
  background-color: #213A82;
}

.emotion-2:active:not(:disabled) svg {
  fill: #535353;
}

.emotion-3 {
  display: block;
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-4 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 64px;
  height: 64px;
  padding: 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #AEBFFF;
  border-radius: 50%;
  color: #3358CC;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: progress;
}

.emotion-4 svg {
  width: 32px;
  height: 32px;
}

.emotion-4 svg {
  fill: #3358CC;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-7 {
  width: 32px;
  height: 32px;
  stroke: #3358CC;
}

.emotion-7 circle {
  r: calc(50% - 2px);
  fill: transparent;
  stroke-width: 2px;
  stroke-dasharray: 502;
  stroke-dashoffset: 360;
  -webkit-transform: rotate(270deg);
  -moz-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
  transform-origin: 50% 50%;
  will-change: stroke-dasharray;
  will-change: stroke-dashoffset;
  will-change: transform;
  -webkit-animation: rotate 1s linear infinite;
  animation: rotate 1s linear infinite;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 48px;
  height: 48px;
  padding: 12px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 50%;
  color: #FFFFFF;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-8 svg {
  width: 24px;
  height: 24px;
}

.emotion-8 svg {
  fill: #FFFFFF;
}

.emotion-8:hover:not(:disabled) {
  background-color: #2B4AAB;
}

.emotion-8:active:not(:disabled) {
  background-color: #213A82;
}

.emotion-8:disabled {
  background-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-8:disabled svg {
  fill: #C0C0C0;
}

.emotion-11 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2E2E2E;
  transition-property: fill;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  vertical-align: unset;
  display: inline-block;
}

<section
    aria-label="Audio Player"
  >
    <audio
      data-testid="audio-element"
      src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
    />
    <div
      class="emotion-0"
      data-testid="audio-slider"
    >
      <div
        class="emotion-1"
        data-testid="audio-slider-track"
        style="background: rgb(255, 255, 0);"
        values="0"
      >
        <div
          aria-describedby="mock-nk-1"
          aria-label="seek bar"
          aria-valuemax="1"
          aria-valuemin="0"
          aria-valuenow="0"
          aria-valuetext="Playback time: 0 seconds of 0 seconds"
          class="emotion-2"
          data-testid="audio-slider-thumb"
          draggable="false"
          role="slider"
          style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(NaNpx, NaNpx);"
          tabindex="0"
          values="0"
        />
      </div>
    </div>
    <span
      aria-hidden="true"
      class="emotion-3"
      id="mock-nk-1"
    >
      Use the arrow keys to fast forward or rewind
    </span>
    <button
      aria-busy="true"
      aria-label="Play"
      aria-live="polite"
      aria-pressed="false"
      class="emotion-4"
      data-testid="audio-player-play-pause-button"
      type="button"
    >
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <svg
            aria-hidden="true"
            class="emotion-7"
            fill="currentColor"
            viewBox="0 0 64 64"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="50%"
              cy="50%"
            />
          </svg>
        </div>
      </div>
    </button>
    <button
      aria-label="Fast forward for 10 seconds"
      class="emotion-8"
      data-testid="audio-player-forward-button"
      type="button"
    >
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <svg
            aria-hidden="true"
            class="emotion-11 emotion-12"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="24"
              width="24"
            />
            <path
              d="M18 13c0 3.31-2.69 6-6 6s-6-2.69-6-6 2.69-6 6-6v4l5-5-5-5v4c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8h-2z"
            />
            <polygon
              points="10.86,15.94 10.86,11.67 10.77,11.67 9,12.3 9,12.99 10.01,12.68 10.01,15.94"
            />
            <path
              d="M12.25 13.44v.74c0 1.9 1.31 1.82 1.44 1.82.14 0 1.44.09 1.44-1.82v-.74c0-1.9-1.31-1.82-1.44-1.82-.14 0-1.44-.09-1.44 1.82zm2.04-.12v.97c0 .77-.21 1.03-.59 1.03s-.6-.26-.6-1.03v-.97c0-.75.22-1.01.59-1.01.38-.01.6.26.6 1.01z"
            />
          </svg>
        </div>
      </div>
    </button>
    <button
      aria-label="Rewind 10 seconds"
      class="emotion-8"
      data-testid="audio-player-replay-button"
      type="button"
    >
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <svg
            aria-hidden="true"
            class="emotion-11 emotion-12"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="24"
              width="24"
            />
            <path
              d="M11.99 5V1l-5 5 5 5V7c3.31 0 6 2.69 6 6s-2.69 6-6 6-6-2.69-6-6h-2c0 4.42 3.58 8 8 8s8-3.58 8-8-3.58-8-8-8z"
            />
            <path
              d="M10.89 16h-.85v-3.26l-1.01.31v-.69l1.77-.63h.09V16zM15.17 14.24c0 .32-.03.6-.1.82s-.17.42-.29.57-.28.26-.45.33-.37.1-.59.1-.41-.03-.59-.1-.33-.18-.46-.33-.23-.34-.3-.57-.11-.5-.11-.82v-.74c0-.32.03-.6.1-.82s.17-.42.29-.57.28-.26.45-.33.37-.1.59-.1.41.03.59.1.33.18.46.33.23.34.3.57.11.5.11.82v.74zm-.85-.86c0-.19-.01-.35-.04-.48s-.07-.23-.12-.31-.11-.14-.19-.17-.16-.05-.25-.05-.18.02-.25.05-.14.09-.19.17-.09.18-.12.31-.04.29-.04.48v.97c0 .19.01.35.04.48s.07.24.12.32.11.14.19.17.16.05.25.05.18-.02.25-.05.14-.09.19-.17.09-.19.11-.32.04-.29.04-.48v-.97z"
            />
          </svg>
        </div>
      </div>
    </button>
  </section>
</DocumentFragment>
`;
